# autoroster

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
api/: index.py
autoroster/: parser.py  vision.py
autoroster/auth/: apple.py  google.py
autoroster/calendar_clients/: google_cal.py  icloud_cal.py
static/: app.js  style.css
templates/: base.html  done.html  icloud_connect.html  login.html  preview.html  privacy.html  resolve.html  terms.html  upload.html
