[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autoroster"
version = "0.1.0"
description = "Convert roster calendar screenshots into calendar events"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "Pillow>=10.0",
    "anthropic>=0.40",
    "google-auth>=2.25",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.110",
    "caldav>=1.3",
    "PyJWT>=2.8",
    "cryptography>=41.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "black"]

[project.scripts]
autoroster = "autoroster.cli:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
